<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.training.android.githubusersdemo.model.entity.UserListItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_retry"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.userdetails.UserDetailsFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/user_details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="visible">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/text_view_name"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_view_email"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_view_followers"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_view_following"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{user.name == null ? @string/not_set : user.name}"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        tools:text="name" />

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{user.email == null ? @string/not_set : user.email}"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="@+id/textView2"
                        tools:text="email" />

                    <TextView
                        android:id="@+id/followersCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{Integer.toString(user.followersCount)}"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3"
                        tools:text="followers count" />

                    <TextView
                        android:id="@+id/followingCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{Integer.toString(user.followingCount)}"
                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4"
                        tools:text="following count" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_view_creation_date"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/creationDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text='@{user.createdAtDate}'
                        app:layout_constraintBottom_toBottomOf="@+id/textView10"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toTopOf="@+id/textView10"
                        tools:text="date" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>